# qqml

./: .clang-format  .gitignore  .gitlab-ci.yml  2  :  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  c_utils_sig.c  c_utils_term.c  example.qqml  example.qqml.json  install.sh  license-comment.py  log.txt  rustfmt.toml  termutils.c  test.qqml
.github/workflows/: go.yml  rust.yml
ascii/: bart.ascii  homer.ascii  popeye.ascii  squidward.ascii
cli/: argparse.rs  main.rs
cli/argparse/: command.rs  flag.rs  mod.rs  test.rs  utils.rs
cli/cmd/: compile.rs  mod.rs  run.rs
doc/: QQML.md
eval/: Cargo.toml
eval/src/: test.rs
help/: Cargo.toml
help/src/: lib.rs  qqml.rs  qqml_check.rs  section.rs  section_play.rs  yarr.rs
lexer/src/: error.rs  lexer.rs  lib.rs  test.rs  token.rs
lib/: c_utils.rs  lib.rs  termutils.rs
lib/eval/: diagnostics.rs  end_screen.rs  exit.rs  mod.rs  render.rs  repl.rs
lib/json/: lexer.rs  mod.rs  parser.rs  test.rs
lib/lexer/: core.rs  mod.rs  test.rs  token.rs
lib/parser/: core.rs  error.rs  mod.rs  test_correct.rs
libnocrates/: CMakeLists.txt  utils.c
parser/src/: error.rs
qpm/: go.mod  main.go  w
qpm/cmd/: init.go  install.go  main.go  reset.go  root.go  run.go  version.go
qpm/cmds/: init.go  install.go  run.go  utils.go
qqml/: test.qqml
qqml_cli/: Cargo.toml  log.txt
qqml_eval/: Cargo.toml
qqml_lexer/: Cargo.toml
qqml_parser/: Cargo.toml
rlibnocrates/: Cargo.toml  build.rs
rtermutils/: Cargo.toml  build.rs
src/: argparse.rs  lib.rs  main.rs
termutils/: CMakeLists.txt  termutils.c
(+140 files in other folders)
