[package]
name = "qqml"
version = "0.5.2"
edition = "2021"
readme = "./README.md"
documentation = "https://github.com/mppbtw/qqml"
license = "GPL-3.0-or-later"
description = "Backend of the QQML CLI (Parser/Compiler/Evaluator)"

[lib]
name = "libqqml"
path = "./lib/lib.rs"


[[bin]]
name = "qqml"
path = "./cli/main.rs"


[build-dependencies]
cmake = "0.1.50"
# no dependencies for me
